--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
+    width: 60%;
     margin: 0 auto;
     padding: 0;
-    font-family: "Poppins", Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 .general {
     width: 100%;
@@ -9,6 +10,7 @@ body {
     color: #4449F1;
     }
 .navigation {
+    border-radius: 5px;
     width: 100%;
     height: 40px;
     background-color: #4449F1;
@@ -30,7 +32,7 @@ body {
 }
 
 .bloc1 {
-    width: 20%;
+    width: 40%;
     background-color: #d5e0fb;
     display: flex;
     flex-direction: column;
@@ -40,16 +42,19 @@ body {
     display: flex;
     flex-direction: column;
 }
+.photo {
+    width: 100%;
+    height: 25%;
+}
 .contact_information {
     background-color: #4449F1;
     color: #FEF7FD;
     padding-left: 20px;
+    margin: 0;
 }
     
-
-
 .page-title {
-    margin: 125px 80px 125px 60px;
+    margin: 115px 80px 115px 60px;
 }
 .main_title {
     margin: 0;
@@ -60,8 +65,10 @@ body {
     
 }
 .section-title {
+    border-radius: 10px;
     background-color: #dadbfc;
     padding-left: 60px;
+    margin: 20px;
 }
 
 .about_me p {
@@ -99,36 +106,27 @@ body {
     padding-left: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.photo {
-    width:100px;
-    height:300px ;
-}
 .footer {
     display: flex;
     background-color: #4449F1;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600px;
-    justify-content: space-between;
+    justify-content:space-around;
     align-items: center;
-    padding: 0px 80px;
+    padding: 10px 10px 10px 10px;
 
 }
+.footer__github {
+    width: 110px;
+    vertical-align: text-top;
+    text-decoration: none;
+    padding: 10px 10px 10px 10px;
+}
+.year {
+    width: 110px;
+}
 .image_footer {
-width: 80px;
-height: 80px;
+    width: 110px;
+    height: 100px;
 }
